bug fixes and utility methods